Fix a couple issues with package.json
 - change node-static dependency version requirement to one that exists (whoops!)
 - add now.js development dependency for the examples

--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "test": "open ./tests/batman/test.html"
   },
   "dependencies": {
-    "node-static": "1"
+    "node-static": "~0.5"
   },
   "devDependencies": {
     "coffee-script": "~1.1",
+    "now": "~0.5",
     "glob": "~2.0"
   }
 }
