Switch to Coffeescript tests
- deleted old test suite and fixtures
- updated Coffeescript compiler to 1.1.0 (thus reverting the global hack from 2b5caa2bc0748c)
- added test_helper.coffee for Jasmine-esque spies
- added QUnit tests for Batman.Observable, Batman.Event, Batman.mixin()
- added `cake test` command for running on the command line
- updated package.json to Nick's liking

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Nicholas Small <nick@shopify.com>",
   "name": "batman",
   "description": "A full-stack Javascript framework that helps you build rich, single-page, Javascript applications.",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "homepage": "http://batmanjs.org",
   "repository": {
     "type": "git",
@@ -13,7 +13,9 @@
     "batman" : "./tools/batman"
   },
   "scripts": {
-    "test": "open ./tests/batman/test.html"
+    "test": "cake test",
+    "build": "cake build",
+    "watch": "cake watch"
   },
   "dependencies": {
     "node-static": "~0.5"
@@ -21,6 +23,8 @@
   "devDependencies": {
     "coffee-script": "~1.1",
     "now": "~0.5",
-    "glob": "~2.0"
+    "glob": "~2.0",
+    "jsdom": "~0.2.0",
+    "qunit": "~0.1.5"
   }
 }
