Update package.json for new cake command syntax, and ignore the whole examples directory per Nick's decision.

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "scripts": {
     "test": "cake test",
-    "build": "cake build",
-    "watch": "cake watch"
+    "build": "cake build"
   },
   "dependencies": {
     "node-static": "~0.5"
