--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "qunit": "~0.1.5",
     "q": "~>0.6.0",
     "muffin": "~>0.1.7",
-    "temp": "~>0.2.0"
+    "temp": "~>0.2.0",
+    "benchmark": "~0.2.1",
+    "microtime": "~0.1.3"
   },
   "batman": {
     "build": false
