--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "coffee-script": "~1.1",
+    "docco": "~0.3.0",
     "now": "~0.5",
     "glob": "~2.0",
     "jsdom": "~0.2.0",
