Updated Cakefile to add dist action.
 - Abstracted all the business out of the Cakefile into an npm package, 'muffin'
 - added `cake --dist build` for building minified versions into lib/dist
 - added `cake stats` actions for tracking compressed size
 - redid the request tests to not rely on an adapter
 - fixed a few issues with command line test runs, they still don't work though.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "now": "~0.5",
     "glob": "~2.0",
     "jsdom": "~0.2.0",
-    "qunit": "~0.1.5"
+    "qunit": "~0.1.5",
+    "q": "~>0.6.0"
   }
 }
