--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "glob": "~2.0",
     "jsdom": "~0.2.0",
     "qunit": "~0.1.5",
-    "q": "~>0.6.0"
+    "q": "~>0.6.0",
+    "muffin": "~>0.1.1"
   }
 }
