Rework rest storage request structure so options can be added in subclasses

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "git://github.com/Shopify/batman.git"
   },
-  "main": "./lib/batman.js",
+  "main": "./lib/batman.node.js",
   "bin" : {
     "batman" : "./tools/batman"
   },
