--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsdom": "~0.2.0",
     "qunit": "~0.1.5",
     "q": "~>0.6.0",
-    "muffin": "~>0.1.1"
+    "muffin": "~>0.1.5",
+    "temp": "~>0.2.0"
   }
 }
