Switched to connect and added on the fly coffeescript compilation

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "cake build"
   },
   "dependencies": {
+    "connect": "~1.6.1"
   },
   "devDependencies": {
     "coffee-script": "~1.1",
