Moved Batman to modules.exports instead of exports.Batman, revamped tools to work and look nice.
 - moved Batman to be the exported object instead of a property on it.
 - rewrote the tools to use cli and its handy stuff like auto generation of usage's
 - made the server compile CoffeeScript on the fly when asked for a nonexistent .js file in a directory with a .coffee file of the same name
 - made the server serve lib from the batman project root to routes matching /batman
 - updated the batman g generated files to work and be a bit more helpful with some boilerplate comments

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "cake build"
   },
   "dependencies": {
-    "connect": "~1.6.1"
+    "connect": "~1.6.1",
+    "cli": "~0.3.7"
   },
   "devDependencies": {
     "coffee-script": "~1.1",
