Vendor cli.js so we can change some of it's silliness.

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "build": "cake build"
   },
   "dependencies": {
-    "connect": "~1.6.1",
-    "cli": "~0.3.7"
+    "connect": "~1.6.1"
   },
   "devDependencies": {
     "coffee-script": "~1.1",
