added coffee-script as npm dependency

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build": "cake build"
   },
   "dependencies": {
+    "coffee-script": "~1.1",
     "connect": "~1.6.1"
   },
   "devDependencies": {
