--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-before_script: "npm install --dev"
+before_script: "npm install"
 script: "npm test"
 notifications:
   irc: "irc.freenode.org#batmanjs"
