--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "now": "~0.5",
     "glob": "~2.0",
     "jsdom": "~0.2.0",
-    "qunit": "~0.1.5",
+    "qunit": "0.1.5",
     "q": "~>0.6.0",
     "muffin": "~>0.1.7",
     "temp": "~>0.2.0"
