--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 pygments: true
 download:
-    version: 0.5.1 alpha
-    date: "August 25, 2011"
-    size: 15kb gzipped
-    blurb: Initial alpha release of batman.js. Please see the blog post or release notes for more information.
+    version: 0.6.0
+    date: "September 13, 2011"
+    size: 18kb gzipped
+    blurb: Second alpha release of batman.js. Please see the blog post or release notes for more information.
 examples:
     - title: Hello World
       key: hello world
