--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "qunit": "0.1.5",
     "q": "~>0.6.0",
     "muffin": "~>0.2.0",
+    "uglify-js": "1.0.3",
     "temp": "~>0.2.0"
   },
   "batman": {
