Fix tests in new jsdom.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "docco": "~0.3.0",
     "now": "~0.5",
     "glob": "~2.0",
-    "jsdom": "~0.2.0",
+    "jsdom": "0.2.5",
     "qunit": "0.1.5",
     "q": "~>0.6.0",
     "muffin": "~>0.2.0",
