--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jsdom": "0.2.5",
     "qunit": "0.1.5",
     "q": "~>0.6.0",
-    "muffin": "~>0.2.0",
+    "muffin": "0.2.1",
     "uglify-js": "1.0.3",
     "temp": "~>0.2.0"
   },
