Switch to the node_js builder for Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
-before_script: "npm install"
-script: "npm test"
+language: 'node_js'
+node_js:
+  - 0.4
 notifications:
   irc: "irc.freenode.org#batmanjs"
   email: false
