--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "build": "cake build"
   },
   "dependencies": {
-    "connect": "~1.6.1"
+    "connect": "~1.6.1",
+    "coffee-script": "1.1.2"
   },
   "devDependencies": {
-    "coffee-script": "1.1.2",
     "daemon": "~0.3.0",
     "docco": "~0.3.0",
     "now": "~0.5",
