Update annotated source, docs, config for v0.8.0

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 pygments: true
 download:
-    version: 0.7.5
-    date: "October 25, 2011"
+    version: 0.8.0
+    date: "November 22nd, 2011"
     size: 18kb gzipped
-    blurb: Third alpha release of batman.js. Please see the blog post or release notes for more information.
+    blurb: Fourth alpha release of batman.js. Please see the blog post or release notes for more information.
 examples:
     - title: Hello World
       url: '/hello_world.html'
