--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "coffee-script": "1.1.2"
   },
   "engines": {
-    "node": "0.4.x"
+    "node": "> 0.4.0 < 0.7.0"
   },
   "devDependencies": {
     "daemon": "~0.3.0",
