Fix tests to run on Travis and run Travis tests across both node versions supported.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "batman" : "./tools/batman"
   },
   "scripts": {
-    "test": "cake test",
+    "test": "node tests/run.js",
     "build": "cake build"
   },
   "dependencies": {
@@ -33,8 +33,7 @@
     "muffin": "0.2.7",
     "uglify-js": "1.2.5",
     "temp": "~>0.2.0",
-    "qqunit": "~>0.1.1",
-    "node-fork": "~>0.4.0"
+    "qqunit": "0.1.2"
   },
   "engines": {
     "node": "0.4.x || 0.6.x"
